# Agrivo_SRE_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.bot.yml  docker-compose.monitoring.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  telemetry.py
app/api/: __init__.py  health.py  routes.py
app/bot/: application.py  commands.py  formatters.py  keyboards.py  permissions.py
app/locales/: az.json  en.json
app/models/: __init__.py  common.py  health.py  operations.py
app/repositories/: state_repository.py
app/services/: __init__.py  ai_service.py  health_service.py  mock_service.py  operations_service.py  real_service.py  scoring_service.py  service_factory.py
app/utils/: __init__.py  sanitization.py  telegram_text.py
mock-data/: argocd-out-of-sync.json  crash-loop-backoff.json  database-unavailable.json  failed-deployment.json  healthy-system.json  high-cpu.json  high-latency.json  resolved-incident.json
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: agrivo-backend.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
tests/: conftest.py  test_ai_service.py  test_api_health.py  test_authorization.py  test_encoding.py  test_formatters.py  test_health_aggregation.py  test_keyboards.py  test_mock_mode.py  test_operations_service.py  test_scoring_service.py
